--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
   <script>
     Fsss.create(document.getElementById('app-slideshow'), {
       images: [
-        {url: 'https://i.imgur.com/EoWVoF8.jpg', caption: "LOL !"},
-        'https://i.imgur.com/vZNwoN8.jpg',
-        'https://i.imgur.com/FD23KSS.jpg',
+        {url: '//via.placeholder.com/350x150', caption: "LOL !"},
+        '//via.placeholder.com/150x300',
+        '//via.placeholder.com/2000x2000',
+        '//via.placeholder.com/20x20',
       ]
     }).show()
   </script>
