--- a/src/Screenshow.html
+++ b/src/Screenshow.html
@@ -30,7 +30,7 @@
 
 <script>
 
-  import Swiper from 'swiper'
+  import Swiper from 'swiper/dist/js/swiper.js' // force es5
 
   export default {
     data() {
