display title with transitions

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
         {url: '//via.placeholder.com/2000x2000', width: 2000, height: 2000},
         {url: '//via.placeholder.com/20x20', width: 20, height: 20},
       ],
+      intro: {
+        title: "This is a slideshow !"
+      },
       opts: {
         maxImageWidth: 350,
         maxImageHeight: 300,
