build with rollup

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
   <meta name='viewport' content='width=device-width'>
 
   <title>Svelte app</title>
-  <link rel='stylesheet' href='bundle.css'>
+  <link rel='stylesheet' href='fsss.css'>
 </head>
 
 <body style="padding:0;margin:0">
   <button id="aaa">go swiper</button>
   <div id="app-slideshow"></div>
-  <script src='bundle.js'></script>
+  <script src='fsss.js'></script>
   <script type="text/html" id="hello-tpl">
     <p style="padding: 3em;" class="fsss-text fsss-subtitle">
       This is an html template to demonstrate html slides.
