--- a/src/Screenshow.html
+++ b/src/Screenshow.html
@@ -54,7 +54,7 @@
   // We use a separated component for keyboard events so we can put-it in a #if
   // block and not listen on events when the slideshow is invisible
 
-  import KeyboardEvents from './KeyboardEvents' // force es5
+  import KeyboardEvents from './KeyboardEvents.html' // force es5
 
   const spawn = window.requestAnimationFrame
     ? window.requestAnimationFrame
